<resources>
    <string name="app_name">Edulexa</string>
    <string name="internet_connection_error">Internet connection is required</string>
    <string name="api_response_failure">Api Response is Failure</string>
    <string name="response_null_or_empty_validation">Response is null or empty.</string>
    <string name="did_not_fetch_data">Did not fetch data</string>
    <string name="login_select_login_type">Please select login type</string>
    <string name="login_enter_user_name">Please enter username</string>
    <string name="login_enter_password">Please enter password</string>
    <string name="login_select_branch">Please select branch</string>
    <string name="permission_denied">Permission denied</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_school_code">Enter School Code</string>
    <string name="enter_school_code_hint">Enter school code</string>
    <string name="submit_enter_school_code">Submit</string>
    <string name="enter_school_code_empty_validation">Please enter school code</string>
    <string name="back_login">Back</string>
    <string name="staff">Staff</string>
    <string name="student">Student</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_multiple_child_class_format">%s%s%s</string>
    <string name="phone_number_forgot_password">Phone Number</string>
    <string name="country_code_forgot_password">+91</string>
    <string name="dummy_phone_number_forgot_password">1234567890</string>
    <string name="generate_otp_forgot_password">Generate OTP</string>
    <string name="cancel_forgot_password">Cancel</string>
    <string name="enter_otp_forgot_password">Enter OTP</string>
    <string name="send_again_forgot_password">Send Again</string>
    <string name="verify_forgot_password">Verify</string>
    <string name="create_new_password_forgot_password">Create New Password</string>
    <string name="confirm_new_password_forgot_password">Confirm New Password</string>
    <string name="dummy_password_hint_forgot_password">********</string>
    <string name="submit_forgot_password">Submit</string>
    <string name="no_data_dashboard">No Data</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="dummy_student_name">Neha Saini</string>
    <string name="dummy_student_class">Class VII B</string>
    <string name="dashboard_student_today_homework">Today\'s Homework</string>
    <string name="dashboard_student_you_are_present">You are present today</string>
    <string name="dashboard_student_no_today_homework">No Homework Today</string>
    <string name="dashboard_student_class_section_format">%s%s%s%s</string>
    <string name="dashboard_student_present_format">%s%s%s</string>
    <string name="homework_student">Homework</string>
    <string name="homework_student_no_homework">No Homework</string>
    <string name="calendar_student">Calendar</string>
    <string name="concat_string_with_text_format">%s%s%s</string>
    <string name="calendar_student_date">Date :</string>
    <string name="calendar_student_in_time">In Time :</string>
    <string name="calendar_student_out_time">Out Time :</string>
    <string name="calendar_student_sun">Sun</string>
    <string name="calendar_student_mon">Mon</string>
    <string name="calendar_student_tue">Tue</string>
    <string name="calendar_student_wed">Wed</string>
    <string name="calendar_student_thu">Thu</string>
    <string name="calendar_student_fri">Fri</string>
    <string name="calendar_student_sat">Sat</string>
    <string name="calendar_student_no_event">No Event</string>
    <string name="fee_student">Fee</string>
    <string name="school_fee_student">School Fee</string>
    <string name="exam_fee_student">Exam Fee</string>
    <string name="activity_fee_student">Activity Fee</string>
    <string name="other_fee_student">Other Fee</string>
    <string name="fee_qr_code_student">QR Code</string>
    <string name="fee_upload_student">Upload</string>
    <string name="fee_receipts_student">Receipts</string>
    <string name="total_fee">Total Fee</string>
    <string name="extra_fee">Extra Fee</string>
    <string name="late_charges_fee">Late Charges</string>
    <string name="paid_fee">Paid Fee</string>
    <string name="fee_student_no_data">No Fee</string>
    <string name="fee_student_pay">Pay</string>
    <string name="exam_student">Examination</string>
    <string name="examination_list">Examination List</string>
    <string name="examination_student_start">Start</string>
    <string name="examination_student_completed">Completed</string>
    <string name="examination_student_no_data">No Data</string>
    <string name="exam_student_detail">Exam Detail</string>
    <string name="exam_student_detail_subject">Subject Name :</string>
    <string name="exam_student_detail_duration">Duration :</string>
    <string name="exam_student_detail_date_time">Date/Time :</string>
    <string name="exam_student_detail_room_no">Room No :</string>
    <string name="student_exam_detail_divider">/</string>
    <string name="student_exam_detail_exam_code">Exam Code :</string>
    <string name="student_exam_detail_submit">Submit</string>
    <string name="student_exam_detail_previous">Previous</string>
    <string name="student_exam_detail_next">Next</string>
    <string name="report_card_student">Report Card</string>
    <string name="report_card_student_no_data">No Data</string>
    <string name="report_card_student_no_marks_data">No Marks Data</string>
    <string name="notice_board_student">Notice Board</string>
    <string name="notice_board_no_data">No Notice Board Data</string>
    <string name="gallery_student">Gallery</string>
    <string name="gallery_student_transition_name">Gallery Zoom</string>
    <string name="gallery_student_all">All</string>
    <string name="gallery_student_video">Video</string>
    <string name="gallery_student_image">Images</string>
    <string name="gallery_student_documents">Documents</string>
    <string name="gallery_student_links">Links</string>
    <string name="gallery_student_no_data">No Data</string>
    <string name="profile_student">Profile</string>
    <string name="student_profile_roll_number">Roll Number</string>
    <string name="student_profile_dob">Date Of Birth</string>
    <string name="student_profile_blood_group">Blood Group</string>
    <string name="student_profile_emergency_contact">Emergency Contact</string>
    <string name="student_profile_position_in_class">Position in Class</string>
    <string name="student_profile_father_name">Father\'s Name</string>
    <string name="student_profile_mother_name">Mother\'s Name</string>
    <string name="student_profile_ask_for_update">Ask For Update</string>
    <string name="language_profile_student">Language</string>
    <string name="about_us_profile_student">About Us</string>
    <string name="language_student">Change Language</string>
    <string name="language_student_hindi">Hindi</string>
    <string name="language_student_english">English</string>
    <string name="apply_student">Apply</string>
    <string name="about_us_student">About Us</string>
    <string name="about_us_student_school_name">School Name</string>
    <string name="about_us_student_address">Address</string>
    <string name="about_us_student_phone">Phone</string>
    <string name="about_us_student_email">Email</string>
    <string name="about_us_student_school_code">School Code</string>
    <string name="about_us_student_current_session">Current Session</string>
    <string name="about_us_student_session_month">Session Month</string>
    <string name="attendance_student">Attendance</string>
    <string name="attendance_student_present">Present</string>
    <string name="attendance_student_absent">Absent</string>
    <string name="attendance_student_holiday">Holiday</string>
    <string name="lesson_plan_student">Lesson Plan</string>
    <string name="lesson_plan_student_select_date">Select Date</string>
    <string name="lesson_plan_student_no_data">No Data</string>
    <string name="lesson_plan_student_title">Title :</string>
    <string name="lesson_plan_student_description">Description :</string>
    <string name="lesson_plan_student_your_lesson">Your Lesson :</string>
    <string name="lesson_plan_student_topic_name">Topic Name :</string>
    <string name="lesson_plan_student_lesson_name">Lesson Name :</string>
    <string name="lesson_plan_student_period">Period :</string>
    <string name="lesson_plan_student_teaching_aids">Teaching Aids :</string>
    <string name="lesson_plan_student_portion_actually_taught">Portion Actually Taught :</string>
    <string name="lesson_plan_student_homework_assigned">Homework Assigned :</string>
    <string name="lesson_plan_student_homework_not_assigned_reason">Homework Not Assigned Reason :</string>
    <string name="lesson_plan_student_type">Type :</string>
    <string name="lesson_plan_student_delete">Delete</string>
    <string name="lesson_plan_student_info">Info</string>
    <string name="lesson_plan_student_comprehensive_questions">Comprehensive Questions :</string>
    <string name="lesson_plan_student_general_objectives">General Objectives :</string>
    <string name="lesson_plan_student_presentation">Presentation :</string>
    <string name="lesson_plan_student_previous_knowledge">Previous Knowledge :</string>
    <string name="lesson_plan_student_teaching_method">Teaching Method :</string>
    <string name="progress_bar_please_wait">Please wait…</string>
    <string name="class_timetable_student">Class Timetable</string>
    <string name="class_timetable_student_no_class_schedule">No class schedule</string>
    <string name="download_center_student">Download Center</string>
    <string name="download_center_student_images">Images</string>
    <string name="apply_leave_student">Apply Leave</string>
    <string name="apply_leave_student_new_leave">Apply for new leave</string>
    <string name="add_leave_student_from_date">From Date</string>
    <string name="add_leave_student_select_from_date">Select from date</string>
    <string name="add_leave_student_to_date">To Date</string>
    <string name="add_leave_student_select_to_date">Select to date</string>
    <string name="add_leave_student_reason_for_leave">Reason for leave</string>
    <string name="add_leave_student_enter_reason">Enter reason</string>
    <string name="add_leave_student_attach_document">Attach a document</string>
    <string name="circular_staff_publish_date">Publish Date</string>
    <string name="circular_staff_post_message">Post Message</string>
    <string name="circular_staff_post_news">Post News</string>
    <string name="circular_staff_title">Title</string>
    <string name="circular_staff_enter_title">Enter title</string>
    <string name="circular_staff_attach_document">Attach Document</string>
    <string name="circular_staff_upload_document">Upload Document</string>
    <string name="circular_staff_circular_date">Circular Date</string>
    <string name="circular_staff_select_circular_date">Select circular date</string>
    <string name="circular_staff_select_publish_date">Select publish date</string>
    <string name="circular_staff_message">Message</string>
    <string name="circular_staff_enter_message">Enter message</string>
    <string name="circular_staff_group">Group</string>
    <string name="circular_staff_individual">Individual</string>
    <string name="circular_staff_class">Class</string>
    <string name="circular_staff_message_to">Message To</string>
    <string name="circular_staff_section">Section</string>
    <string name="circular_staff_send">Send</string>
</resources>