<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="@dimen/_100sdp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@drawable/header_bg_staff">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back_white" />

        <com.edulexa.views.MediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_toEndOf="@+id/iv_back"
            android:text="@string/apply_leave_student"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_60sdp"
        android:background="@drawable/header_top_right_radius">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <com.edulexa.views.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_leave_student_new_leave"
                    android:textColor="@color/primaray_text_color"
                    android:textSize="@dimen/_16ssp" />


                <com.edulexa.views.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/add_leave_student_from_date"
                    android:textColor="@color/primaray_text_color"
                    android:textSize="@dimen/_14ssp" />


                <com.edulexa.views.RegularTextView
                    android:id="@+id/tv_form_date"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_border_5"
                    android:text="@string/add_leave_student_select_from_date"
                    android:backgroundTint="@color/secondary_text_color"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColor="@color/primaray_text_color"
                    android:textSize="@dimen/_14ssp" />

                <com.edulexa.views.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/add_leave_student_to_date"
                    android:textColor="@color/primaray_text_color"
                    android:textSize="@dimen/_14ssp" />


                <com.edulexa.views.RegularTextView
                    android:id="@+id/tv_to_date"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_border_5"
                    android:text="@string/add_leave_student_select_to_date"
                    android:backgroundTint="@color/secondary_text_color"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColor="@color/primaray_text_color"
                    android:textSize="@dimen/_14ssp" />


                <com.edulexa.views.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/add_leave_student_reason_for_leave"
                    android:textColor="@color/primaray_text_color"
                    android:textSize="@dimen/_14ssp" />


                <com.edulexa.views.RegularEditText
                    android:id="@+id/et_reason_for_leave"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:background="@drawable/bg_border_5"
                    android:backgroundTint="@color/secondary_text_color"
                    android:gravity="start"
                    android:padding="@dimen/_10sdp"
                    android:hint="@string/add_leave_student_enter_reason"
                    android:textColor="@color/primaray_text_color"/>


                <com.edulexa.views.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/add_leave_student_attach_document"
                    android:textColor="@color/primaray_text_color"
                    android:textSize="@dimen/_14ssp" />


                <ImageView
                    android:id="@+id/iv_leave_attachment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/no_img_found" />

                <com.edulexa.views.RegularButton
                    android:id="@+id/tv_apply_leave_submit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/ripple_effect_25"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />


            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>