<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="@dimen/_100sdp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@drawable/header_bg_staff">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back_white" />

        <com.edulexa.views.MediumTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_toEndOf="@+id/iv_back"
            android:text="@string/circular_staff_post_message"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_60sdp"
        android:background="@drawable/header_top_right_radius"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <com.edulexa.views.MediumTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/circular_staff_post_news"
                android:textColor="@color/primaray_text_color"
                android:textSize="@dimen/_16ssp" />

            <com.edulexa.views.MediumTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/circular_staff_title"
                android:textColor="@color/primaray_text_color"
                android:textSize="@dimen/_14ssp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_border_5"
                android:backgroundTint="@color/card_view_bg"
                android:orientation="vertical">

                <com.edulexa.views.RegularEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@null"
                    android:hint="@string/circular_staff_enter_title"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColor="@color/primaray_text_color"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <com.edulexa.views.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/circular_staff_attach_document"
                android:textColor="@color/primaray_text_color"
                android:textSize="@dimen/_14ssp" />


            <RelativeLayout
                android:id="@+id/upload_document_lay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_button_5"
                android:backgroundTint="@color/card_view_bg">

                <com.edulexa.views.RegularTextView
                    android:id="@+id/tv_upload_document"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/circular_staff_upload_document"
                    android:textColor="#707070"
                    android:textSize="@dimen/_14ssp" />


            </RelativeLayout>

            <com.edulexa.views.MediumTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/circular_staff_circular_date"
                android:textColor="@color/primaray_text_color"
                android:textSize="@dimen/_14ssp" />

            <RelativeLayout
                android:id="@+id/circular_date_lay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_button_5"
                android:backgroundTint="@color/card_view_bg">

                <com.edulexa.views.RegularTextView
                    android:id="@+id/tv_circular_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/circular_staff_select_circular_date"
                    android:textColor="@color/primaray_text_color"
                    android:textSize="@dimen/_14ssp" />


            </RelativeLayout>

            <com.edulexa.views.MediumTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/circular_staff_publish_date"
                android:textColor="@color/primaray_text_color"
                android:textSize="@dimen/_14ssp" />

            <RelativeLayout
                android:id="@+id/publish_date_lay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_button_5"
                android:backgroundTint="@color/card_view_bg">

                <com.edulexa.views.RegularTextView
                    android:id="@+id/tv_publish_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/circular_staff_select_publish_date"
                    android:textColor="@color/primaray_text_color"
                    android:textSize="@dimen/_14ssp" />


            </RelativeLayout>

            <com.edulexa.views.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/circular_staff_message"
                android:textColor="@color/primaray_text_color"
                android:textSize="@dimen/_14ssp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_button_5"
                android:backgroundTint="@color/card_view_bg"
                android:padding="@dimen/_10sdp">

                <com.edulexa.views.RegularEditText
                    android:id="@+id/et_message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/circular_staff_enter_message"
                    android:inputType="textMultiLine"
                    android:textColor="#707070"
                    android:textColorHint="#707070"
                    android:textSize="@dimen/_14ssp" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_10sdp"
                android:weightSum="3">

                <com.edulexa.views.RegularTextView
                    android:id="@+id/tv_group"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_5"
                    android:backgroundTint="@color/secondary_text_color"
                    android:gravity="center"
                    android:text="@string/circular_staff_group"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

                <com.edulexa.views.RegularTextView
                    android:id="@+id/tv_individual"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_border_5"
                    android:gravity="center"
                    android:text="@string/circular_staff_individual"
                    android:textColor="@color/primaray_text_color"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone" />

                <com.edulexa.views.RegularTextView
                    android:id="@+id/tv_class"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_border_5"
                    android:gravity="center"
                    android:text="@string/circular_staff_class"
                    android:backgroundTint="@color/gray"
                    android:textColor="@color/primaray_text_color"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>

            <com.edulexa.views.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/circular_staff_message_to"
                android:textColor="@color/primaray_text_color"
                android:textSize="@dimen/_14ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/group_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/class_section_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/bg_button_5"
                    android:backgroundTint="@color/card_view_bg">

                    <Spinner
                        android:id="@+id/class_spinn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/ic_drop_down"
                        android:contentDescription="@string/app_name" />

                </RelativeLayout>

                <com.edulexa.views.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/circular_staff_section"
                    android:textColor="@color/primaray_text_color"
                    android:textSize="@dimen/_14ssp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/section_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <com.edulexa.views.RegularTextView
                android:id="@+id/tv_send"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/ripple_effect_5"
                android:gravity="center"
                android:paddingStart="@dimen/_30sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:text="@string/circular_staff_send"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>